<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smartcar Client</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="activity_drive_button_drive">D</string>
    <string name="activity_drive_button_park">P</string>
    <string name="activity_main_camera_image_content">cameraView</string>
    <string name="button">Button</string>
    <string name="logo">logo</string>
    <string name="start_your_engines">Start your engines</string>
    <string name="username">Username</string>
    <string name="pw">Password</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="dev_mode">Dev mode</string>
    <string name="debug_mode">Debug mode</string>
    <string name="drive_your_alset">Drive Your AlSet</string>
    <string name="battery_level">Battery Level:</string>
    <string name="percentage">percentage</string>
    <string name="x_percent" />
</resources>